gatekeeper/1.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-gatekeeper
  labels:
    gatekeeper: enabled
