gatekeeper/test_GK_policy_NS.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gatekeeper-test-policy
  labels:
    owner: rohit
#    gatekeeper: ok
